--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,21 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
-
-apply plugin: 'org.sonarqube'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'org.sonarqube'
+}
 
 def versionMajor = 1
 def versionMinor = 0
 def versionPatch = 0
 
 android {
-    compileSdkVersion 28
+    compileSdk 31
     defaultConfig {
         applicationId "com.javimartd.theguardian"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdk 24
+        targetSdk 31
         versionCode versionMajor * 1000 + versionMinor * 100 + versionPatch * 10
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "com.javimartd.theguardian.test.TestRunner"
@@ -88,9 +86,7 @@ ext.coroutines_version = '1.3.9'
 ext.retrofit_version = '2.3.0'
 ext.okhttp_version = '3.11.0'
 ext.glide_version = '4.11.0'
-ext.mockWebServer_version = '3.8.1'
-ext.rxjava2_version = '2.1.1'
-ext.espresso_version = '3.2.0'
+ext.espresso_version = '3.4.0'
 ext.lifecycle_version = '2.1.0'
 ext.room_version = '2.3.0'
 
@@ -98,26 +94,19 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.google.android.material:material:1.4.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // rx java
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'javax.inject:javax.inject:1'
 
     // lifeCycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
-
-    // anko
-    implementation "org.jetbrains.anko:anko-common:0.10.4"
-
-    // coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // dagger
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -153,16 +142,12 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Required for local unit tests (JUnit 4 framework)
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
 
     // Required for instrumented tests
-    implementation "androidx.annotation:annotation:1.1.0"
-    androidTestImplementation "androidx.test:runner:1.2.0"
-    androidTestImplementation "androidx.test:rules:1.2.0"
-
-    // mock web server
-    testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
-    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
+    implementation "androidx.annotation:annotation:1.3.0"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
 
     // espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
@@ -170,8 +155,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
 
     // androidX helpers
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // mockito
