--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
 
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,15 +35,17 @@
             android:value="true" />
 
         <activity
-            android:name=".ui.news.NewsActivity" />
+            android:name=".ui.news.NewsActivity"
+            android:exported="true"/>
 
         <activity
             android:name=".ui.webView.WebViewActivity"
-            android:screenOrientation="portrait" />
+            android:exported="true"/>
 
         <activity
             android:name=".ui.settings.SettingsActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="sensorPortrait"
+            android:exported="true"/>
 
     </application>
 
