--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,10 +81,10 @@ android {
     }
 }
 
-ext.dagger_version = '2.17'
+ext.dagger_version = '2.23'
 ext.coroutines_version = '1.3.9'
-ext.retrofit_version = '2.3.0'
-ext.okhttp_version = '3.11.0'
+ext.retrofit_version = '2.9.0'
+ext.okhttp_version = '4.9.2'
 ext.glide_version = '4.11.0'
 ext.espresso_version = '3.4.0'
 ext.lifecycle_version = '2.1.0'
@@ -92,11 +92,10 @@ ext.room_version = '2.3.0'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.4.0"
+    implementation "com.google.android.material:material:1.5.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // rx java
@@ -105,17 +104,14 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
 
     // lifeCycle
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // dagger
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-
-    // dagger android
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger:2.35.1"
+    implementation "com.google.dagger:dagger-android:2.35.1"
+    kapt "com.google.dagger:dagger-compiler:2.35.1"
+    kapt "com.google.dagger:dagger-android-processor:2.35.1"
+    kaptAndroidTest "com.google.dagger:dagger-android-processor:2.35.1"
 
     // retrofit OkHttp
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -135,7 +131,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.3.0"
 
     // Gson
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.google.code.gson:gson:2.8.6"
 
     // images
     implementation "com.github.bumptech.glide:glide:$glide_version"
