--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
-    ext.kotlin_version = '1.5.20'
-
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
 
         // NOTE: Do not place your application dependencies here; they belong
