--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,21 +84,19 @@ android {
     }
 }
 
-ext.dagger_version = '2.23'
-ext.coroutines_version = '1.3.9'
 ext.retrofit_version = '2.9.0'
 ext.okhttp_version = '4.9.2'
 ext.glide_version = '4.11.0'
 ext.espresso_version = '3.4.0'
 ext.lifecycle_version = '2.1.0'
-ext.room_version = '2.3.0'
+ext.room_version = '2.4.2'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.5.0"
+    implementation "com.google.android.material:material:1.6.1"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // rx java
@@ -110,9 +108,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // dagger
-    implementation "com.google.dagger:dagger:2.35.1"
+    implementation "com.google.dagger:dagger:2.42"
     implementation "com.google.dagger:dagger-android:2.35.1"
-    kapt "com.google.dagger:dagger-compiler:2.35.1"
+    kapt "com.google.dagger:dagger-compiler:2.42"
     kapt "com.google.dagger:dagger-android-processor:2.35.1"
     kaptAndroidTest "com.google.dagger:dagger-android-processor:2.35.1"
 
@@ -131,7 +129,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // room test helpers
-    testImplementation "androidx.room:room-testing:2.3.0"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.6"
@@ -144,7 +142,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     // Required for instrumented tests
-    implementation "androidx.annotation:annotation:1.3.0"
+    implementation "androidx.annotation:annotation:1.4.0"
     androidTestImplementation "androidx.test:runner:1.4.0"
     androidTestImplementation "androidx.test:rules:1.4.0"
 
